changed the about-text and fixed the alignment on inspiration page

--- a/css/main.css
+++ b/css/main.css
@@ -307,7 +307,7 @@ ul.inspiration-blocks {
 
 ul.inspiration-blocks li {
 	float: left;
-	width:255px;
+	width:238px;
 	margin-right: 21px;
 	margin-bottom: 21px;
 }
